# precificador-lika

./: package-lock.json  package.json  render.yaml  test_precificacao.py
backend/: .env  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250715_initial.py
backend/app/: auth.py  calculadora_indicadores.py  config.py  crud.py  crud_faturamento.py  crud_frete.py  crud_operacional.py  crud_precificacao.py  crud_simples.py  database.py  dependencies.py  main.py  models.py  models_faturamento.py  models_frete.py  models_operacional.py  models_precificacao.py  models_simples.py  schemas.py  schemas_faturamento.py  schemas_frete.py  schemas_indicadores.py  schemas_operacional.py  schemas_precificacao.py  schemas_simples.py  seed_users.py
backend/app/routers/: auth.py  config_bling.py  config_operacional.py  config_precificacao.py  faturamento.py  frete.py  indicadores.py  simples.py
backend/app/services/: indicadores.py
backend/tests/: __init__.py  test_api.py  test_crud_frete.py  test_fretes.py
frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: SimuladorFrete.jsx
frontend/src/services/: api.js
